--- a/sprMRI/BayesianSegmentation/CMakeLists.txt
+++ b/sprMRI/BayesianSegmentation/CMakeLists.txt
@@ -10,5 +10,13 @@ ENDIF(ITK_FOUND)
 
 include_directories(../MRIntensityNormalization)
 
-add_executable(bayes_train sprBayesTrain.cxx )
-target_link_libraries(bayes_train ${ITK_LIBRARIES})
+add_executable(bayes_train MACOSX_BUNDLE sprBayesTrain.cxx )
+add_executable(BayesianSegmentation MACOSX_BUNDLE BayesianSegmentation.cxx)
+
+if( "${ITK_VERSION_MAJOR}" LESS 4 )
+  target_link_libraries(BayesianSegmentation ITKReview ${ITK_LIBRARIES})
+  target_link_libraries(bayes_train ITKReview ${ITK_LIBRARIES})
+else( "${ITK_VERSION_MAJOR}" LESS 4 )
+  target_link_libraries(BayesianSegmentation ${ITK_LIBRARIES})
+  target_link_libraries(bayes_train ${ITK_LIBRARIES})
+endif( "${ITK_VERSION_MAJOR}" LESS 4 )
